--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ button:active {
 
 <body>
   <h1 class="animate"></h1>
-<button>New Word</button>
+<button>eh ya ahmed soliman</button>
 
 <div class="letter"></div>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
